Fix light/dark mode to work after refresh and update comments after delete

--- a/portfolio/src/main/webapp/css/nightmode.css
+++ b/portfolio/src/main/webapp/css/nightmode.css
@@ -26,3 +26,9 @@
 .info-window-text { 
     color: #2f353a; 
 }
+
+.list-group-item { 
+    background-color:#2f353a;
+    border-color: #fff;
+    color: #fff
+}
